test unitaires pour dto et mappers