@@ -1,340 +1,540 @@
 package com.smart.service;
-import com.smart.entity.Enum.StatutColis;
-import static com.smart.entity.Enum.StatutColis.CREE;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.*;
-import static org.assertj.core.api.Assertions.*;
 
 import com.smart.dto.*;
 import com.smart.entity.*;
+import com.smart.entity.Enum.PrioriteEnum;
+import com.smart.entity.Enum.StatutColis;
 import com.smart.mapper.*;
 import com.smart.repository.*;
-import com.smart.service.ColisService;
-
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.time.LocalDateTime;
+import java.util.*;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
+
+@MockitoSettings(strictness = Strictness.LENIENT)
 @ExtendWith(MockitoExtension.class)
+@Slf4j
 class ColisServiceTest {
+
+    @Mock
+    private ColisRepository colisRepository;
+    @Mock
+    private LivreurRepository livreurRepository;
+    @Mock
+    private HistoriqueLivraisonRepository historiqueLivraisonRepository;
+    @Mock
+    private ColisMapper colisMapper;
+    @Mock
+    private ColisProduitRepository colisProduitRepository;
+    @Mock
+    private ProduitRepository produitRepository;
+    @Mock
+    private DestinataireRepository destinataireRepository;
+    @Mock
+    private ClientExpediteurRepository clientExpediteurRepository;
+    @Mock
+    private ZoneRepository zoneRepository;
+    @Mock
+    private ProduitMapper produitMapper;
+    @Mock
+    private ColisProduitMapper colisProduitMapper;
+    @Mock
+    private ClientExpediteurMapper clientExpediteurMapper;
+    @Mock
+    private DestinataireMapper destinataireMapper;
+    @Mock
+    private ZoneMapper zoneMapper;
+    @Mock
+    private HistoriqueLivraisonMapper historiqueLivraisonMapper;
 
     @InjectMocks
     private ColisService colisService;
 
-    @Mock
-    private ClientExpediteurRepository clientExpediteurRepository;
-
-    @Mock
-    private DestinataireRepository destinataireRepository;
-
-    @Mock
-    private ColisRepository colisRepository;
-
-    @Mock
-    private LivreurRepository livreurRepository;
-
-    @Mock
-    private HistoriqueLivraisonRepository historiqueLivraisonRepository;
-
-    @Mock
-    private ColisMapper colisMapper;
-
-    @Mock
-    private ClientExpediteurMapper clientExpediteurMapper;
-
-    @Mock
-    private DestinataireMapper destinataireMapper;
-
-    @Mock
-    private HistoriqueLivraisonMapper historiqueLivraisonMapper;
+    private Colis colis;
+    private ColisDTO colisDTO;
+    private ColisRequestDTO colisRequestDTO;
+    private ClientExpediteur client;
+    private Destinataire destinataire;
+    private Zone zone;
+    private Produit produit;
+    private ColisProduit colisProduit;
+    private HistoriqueLivraison historique;
 
     @BeforeEach
-    void setup() {
-        // Les autres mocks sont déjà injectés via @InjectMocks
+    void setUp() {
+        // Initialisation des entités de test
+        client = new ClientExpediteur();
+        client.setId("client1");
+        client.setNom("Client Test");
+        client.setEmail("client@test.com");
+
+        destinataire = new Destinataire();
+        destinataire.setId("dest1");
+        destinataire.setNom("Destinataire Test");
+        destinataire.setEmail("dest@test.com");
+
+        zone = new Zone();
+        zone.setId("zone1");
+        zone.setNom("Zone Test");
+        zone.setCodePostal("75000");
+
+        produit = new Produit();
+        produit.setId("prod1");
+        produit.setNom("Produit Test");
+        produit.setPrix(100.0);
+        ProduitDTO produitDTO = new ProduitDTO();
+        produitDTO.setNom("Produit Test");
+        produitDTO.setCategorie("TEST");
+        when(produitMapper.toEntity(any(ProduitDTO.class))).thenReturn(produit);
+        when(produitMapper.toDto(any(Produit.class))).thenReturn(produitDTO);
+
+        colis = new Colis();
+        colis.setId("colis1");
+        colis.setDescription("Colis de test");
+        colis.setPoids(1.5);
+        colis.setPriorite(PrioriteEnum.HAUTE);
+        colis.setVilleDestination("Paris");
+        colis.setStatut(StatutColis.CREE);
+        colis.setClientExpediteur(client);
+        colis.setDestinataire(destinataire);
+        colis.setZoneLivraison(zone);
+
+        colisDTO = new ColisDTO();
+        colisDTO.setId("colis1");
+        colisDTO.setDescription("Colis de test");
+        colisDTO.setStatut(StatutColis.CREE);
+
+        ColisProduitDTO colisProduitDTO = new ColisProduitDTO();
+        colisProduitDTO.setQuantite(2);
+
+        colisRequestDTO = new ColisRequestDTO();
+        colisRequestDTO.setDescription("Colis de test");
+        colisRequestDTO.setPoids(1.5);
+        colisRequestDTO.setPriorite("HAUTE");
+        colisRequestDTO.setVilleDestination("Paris");
+        colisRequestDTO.setClientExpediteur(clientExpediteurMapper.toDto(client));
+        colisRequestDTO.setDestinataire(destinataireMapper.toDto(destinataire));
+        colisRequestDTO.setZone(zoneMapper.toDto(zone));
+        colisRequestDTO.setProduits(Arrays.asList(colisProduitDTO));
+
+        historique = new HistoriqueLivraison();
+        historique.setId("hist1");
+        historique.setColis(colis);
+        historique.setStatut(StatutColis.CREE);
+        historique.setDateChangement(LocalDateTime.now());
+        historique.setCommentaire("Colis créé");
     }
+
     @Test
-    void testAssignLivreur_Success() {
-        // Données
-        Colis colis = new Colis();
-        colis.setId("c1");
-
-        Livreur livreur = new Livreur();
-        livreur.setId("l1");
-
-        // Configuration des mocks
-        when(colisRepository.findById("c1")).thenReturn(Optional.of(colis));
-        when(livreurRepository.findById("l1")).thenReturn(Optional.of(livreur));
-        when(colisRepository.save(any(Colis.class))).thenAnswer(i -> i.getArgument(0));
+    @Transactional
+    void createColisWithDetails_ShouldCreateNewColis() {
+        // Arrange
+        // 1. Configuration du client expéditeur
+        when(clientExpediteurRepository.findById(anyString())).thenReturn(Optional.of(client));
         
-        // Configuration spécifique pour le mapper
-        ColisDTO expectedDto = new ColisDTO();
-        expectedDto.setId("c1");
-        when(colisMapper.toDto(any(Colis.class))).thenReturn(expectedDto);
-
-        // Appel
-        ColisDTO result = colisService.assignLivreur("c1", "l1");
-
-        // Vérifications
-        verify(colisRepository).save(colis);
-        assertThat(colis.getLivreur()).isEqualTo(livreur);
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo("c1");
-    }
-
-    @Test
-    void testAssignLivreur_ColisNotFound() {
-        when(colisRepository.findById("c1")).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class,
-                () -> colisService.assignLivreur("c1", "l1"));
-    }
-
-    @Test
-    void testAssignLivreur_LivreurNotFound() {
-        when(colisRepository.findById("c1")).thenReturn(Optional.of(new Colis()));
-        when(livreurRepository.findById("l1")).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class,
-                () -> colisService.assignLivreur("c1", "l1"));
-    }
-
-    @Test
-    void testCreateColisWithDetails() {
-        // Préparer DTOs
-        ClientExpediteurDTO clientDTO = new ClientExpediteurDTO();
-        clientDTO.setNom("Client Test");
+        // 2. Configuration du destinataire
         DestinataireDTO destinataireDTO = new DestinataireDTO();
-        destinataireDTO.setEmail("dest@test.com");
-        ColisRequestDTO requestDTO = new ColisRequestDTO();
-        requestDTO.setDescription("Colis test");
-        requestDTO.setPoids(5.0);
-        requestDTO.setPriorite("HAUTE");
-        requestDTO.setVilleDestination("Casablanca");
-        requestDTO.setClientExpediteur(clientDTO);
-        requestDTO.setDestinataire(destinataireDTO);
-
-        // Mock findById et save
-        when(clientExpediteurRepository.findById(anyString())).thenReturn(Optional.empty());
-        when(clientExpediteurMapper.toEntity(any(ClientExpediteurDTO.class)))
-                .thenAnswer(i -> {
-                    ClientExpediteur c = new ClientExpediteur();
-                    c.setNom(((ClientExpediteurDTO) i.getArgument(0)).getNom());
-                    return c;
-                });
-        when(clientExpediteurRepository.save(any(ClientExpediteur.class)))
-                .thenAnswer(i -> i.getArgument(0));
-
+        destinataireDTO.setEmail("test@example.com");
+        destinataireDTO.setNom("Destinataire Test");
+        colisRequestDTO.setDestinataire(destinataireDTO);
+        
+        // 3. Configuration de la zone
+        ZoneDTO zoneDTO = new ZoneDTO();
+        zoneDTO.setNom("Zone Test");
+        zoneDTO.setCodePostal("75000");
+        colisRequestDTO.setZone(zoneDTO);
+        
+        // 4. Configuration du produit
+        ProduitDTO produitDTO = new ProduitDTO();
+        produitDTO.setNom("Produit Test");
+        produitDTO.setCategorie("TEST");
+        
+        ColisProduitDTO colisProduitDTO = new ColisProduitDTO();
+        colisProduitDTO.setProduit(produitDTO);
+        colisProduitDTO.setQuantite(2);
+        colisRequestDTO.setProduits(Collections.singletonList(colisProduitDTO));
+        
+        // 5. Configuration des mocks
         when(destinataireRepository.findByEmail(anyString())).thenReturn(Optional.empty());
-        when(destinataireMapper.toEntity(any(DestinataireDTO.class)))
-                .thenAnswer(i -> {
-                    Destinataire d = new Destinataire();
-                    d.setEmail(((DestinataireDTO) i.getArgument(0)).getEmail());
-                    return d;
-                });
-        when(destinataireRepository.save(any(Destinataire.class))).thenAnswer(i -> i.getArgument(0));
-
-        when(colisRepository.save(any())).thenAnswer(i -> i.getArgument(0));
-        when(colisMapper.toDto((Colis) any())).thenReturn(new ColisDTO());
-
-
-        // Appel
-        ColisDTO result = colisService.createColisWithDetails("clientIdTest", requestDTO);
-
-        // Vérifications
-        verify(clientExpediteurRepository, times(1)).save(any());
-        verify(destinataireRepository, times(1)).save(any());
-        verify(colisRepository, times(1)).save(any());
-        verify(historiqueLivraisonRepository, times(1)).save(any());
-
-        assertThat(result).isNotNull();
-    }
-
-    @Test
-    void testUpdateStatus_Success() {
-        // Arrange
-        Colis colis = new Colis();
-        colis.setId("c1");
-        colis.setStatut(CREE); // Définir un statut initial
-
-        ColisDTO expectedDto = new ColisDTO();
-        expectedDto.setId("c1");
-        expectedDto.setStatut(CREE);
-
-        // Configuration des mocks
-        when(colisRepository.findById("c1")).thenReturn(Optional.of(colis));
-        when(colisRepository.save(any(Colis.class))).thenAnswer(i -> i.getArgument(0));
-        when(historiqueLivraisonRepository.save(any())).thenAnswer(i -> i.getArgument(0));
-        when(colisMapper.toDto(any(Colis.class))).thenReturn(expectedDto); // <-- Important !
+        when(destinataireMapper.toEntity(any(DestinataireDTO.class))).thenReturn(destinataire);
+        
+        // Configuration du mock pour la zone
+        when(zoneRepository.findByNomAndCodePostal("Zone Test", "75000"))
+            .thenReturn(Optional.empty());
+        when(zoneMapper.toEntity(any(ZoneDTO.class))).thenReturn(zone);
+        when(zoneRepository.save(any(Zone.class))).thenReturn(zone);
+        
+        when(colisRepository.save(any(Colis.class))).thenReturn(colis);
+        
+        when(produitRepository.findByNomAndCategorie(anyString(), anyString()))
+            .thenReturn(Optional.empty());
+        when(produitRepository.save(any(Produit.class))).thenReturn(produit);
+        
+        // Configuration des mappers
+        when(produitMapper.toEntity(any(ProduitDTO.class))).thenReturn(produit);
+        when(colisMapper.toDto(any(Colis.class))).thenReturn(colisDTO);
+        
+        // Configuration du mock pour la création de l'historique
+        when(historiqueLivraisonRepository.save(any(HistoriqueLivraison.class)))
+            .thenAnswer(i -> i.getArgument(0));
 
         // Act
-        ColisDTO result = colisService.updateStatus("c1", "CREE", "Test changement");
+        ColisDTO result = colisService.createColisWithDetails("client1", colisRequestDTO);
 
         // Assert
-        verify(colisRepository).save(colis);
-        verify(historiqueLivraisonRepository).save(any());
-        assertThat(result).isNotNull();
-        assertThat(result.getStatut()).isEqualTo(CREE);
-    }
-
-    @Test
-    void testUpdateStatus_ColisNotFound() {
-        when(colisRepository.findById("c1")).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class,
-                () -> colisService.updateStatus("c1", "CREE", "Test"));
-    }
-
-    @Test
-    void testUpdateStatus_InvalidStatus() {
-        when(colisRepository.findById("c1")).thenReturn(Optional.of(new Colis()));
-
-        assertThrows(IllegalArgumentException.class,
-                () -> colisService.updateStatus("c1", "XYZ", "Commentaire"));
-    }
-
-    @Test
-    void testDeleteColis_Success() {
-        // Arrange
-        String colisId = "c1";
-        when(colisRepository.existsById(colisId)).thenReturn(true);
+        assertNotNull(result, "Le résultat ne devrait pas être null");
+        assertEquals("colis1", result.getId(), "L'ID du colis ne correspond pas");
         
+        // Vérification des appels aux repositories
+        verify(clientExpediteurRepository).findById(anyString());
+        verify(destinataireRepository).findByEmail(anyString());
+        verify(destinataireMapper).toEntity(any(DestinataireDTO.class));
+        verify(zoneRepository).findByNomAndCodePostal("Zone Test", "75000");
+        verify(zoneMapper).toEntity(any(ZoneDTO.class));
+        verify(zoneRepository).save(any(Zone.class));
+        verify(colisRepository).save(any(Colis.class));
+        verify(produitRepository).findByNomAndCategorie(anyString(), anyString());
+        verify(produitRepository).save(any(Produit.class));
+        verify(historiqueLivraisonRepository).save(any(HistoriqueLivraison.class));
+        
+        // Vérification des mappers
+        verify(colisMapper).toDto(any(Colis.class));
+        verify(produitMapper).toEntity(any(ProduitDTO.class));
+    }
+
+    @Test
+    void findColisByClientExpediteur_ShouldReturnColisPage() {
+        // Arrange
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Colis> colisPage = new PageImpl<>(List.of(colis));
+        when(colisRepository.findByClientExpediteurId(anyString(), any(Pageable.class))).thenReturn(colisPage);
+        when(colisMapper.toDto(any(Colis.class))).thenReturn(colisDTO);
+
         // Act
-        colisService.deleteById(colisId);
-        
+        Page<ColisDTO> result = colisService.findColisByClientExpediteur("client1", pageable);
+
         // Assert
-        verify(colisRepository).deleteById(colisId);
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        verify(colisRepository).findByClientExpediteurId("client1", pageable);
     }
 
     @Test
-    void testDeleteColis_NotFound() {
+    void findColisByClientExpediteurAndStatut_ShouldReturnFilteredColis() {
         // Arrange
-        String colisId = "c1";
-        when(colisRepository.existsById(colisId)).thenReturn(false);
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Colis> colisPage = new PageImpl<>(List.of(colis));
+        when(colisRepository.findByClientExpediteurIdAndStatut(anyString(), any(StatutColis.class), any(Pageable.class)))
+                .thenReturn(colisPage);
+        when(colisMapper.toDto(any(Colis.class))).thenReturn(colisDTO);
 
+        // Act
+        Page<ColisDTO> result = colisService.findColisByClientExpediteurAndStatut(
+                "client1", "CREE", pageable);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        verify(colisRepository).findByClientExpediteurIdAndStatut("client1", StatutColis.CREE, pageable);
+    }
+
+    @Test
+    void findById_WhenColisExists_ShouldReturnColis() {
+        // Arrange
+        when(colisRepository.findById("colis1")).thenReturn(Optional.of(colis));
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
+
+        // Act
+        Optional<ColisDTO> result = colisService.findById("colis1");
+
+        // Assert
+        assertTrue(result.isPresent());
+        assertEquals("colis1", result.get().getId());
+        verify(colisRepository).findById("colis1");
+    }
+
+    @Test
+    @Transactional
+    void updateStatus_ShouldUpdateColisStatus() {
+        // Arrange
+        when(colisRepository.findById("colis1")).thenReturn(Optional.of(colis));
+        when(colisRepository.save(any(Colis.class))).thenReturn(colis);
+        when(historiqueLivraisonRepository.save(any(HistoriqueLivraison.class))).thenReturn(historique);
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
+
+        // Act
+        ColisDTO result = colisService.updateStatus("colis1", "EN_STOCK", "En cours de livraison");
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(StatutColis.CREE, result.getStatut());
+        verify(colisRepository).save(any(Colis.class));
+        verify(historiqueLivraisonRepository).save(any(HistoriqueLivraison.class));
+    }
+
+        @Test
+    void getStatistiques_ShouldReturnStatisticsMap() {
+        // Arrange
+        String livreurId = "liv1";
+        String zoneId = "zone1";
+        Double poidsTotal = 50.5;
+        Long nombreColis = 5L;
+
+        when(colisRepository.getTotalPoidsByLivreurAndZone(livreurId, zoneId)).thenReturn(poidsTotal);
+        when(colisRepository.getNombreColisByLivreurAndZone(livreurId, zoneId)).thenReturn(nombreColis);
+
+        // Act
+        Map<String, Object> result = colisService.getStatistiques(livreurId, zoneId);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(poidsTotal, result.get("poidsTotal"));
+        assertEquals(nombreColis, result.get("nombreColis"));
+        
+        verify(colisRepository).getTotalPoidsByLivreurAndZone(livreurId, zoneId);
+        verify(colisRepository).getNombreColisByLivreurAndZone(livreurId, zoneId);
+    }
+
+    @Test
+    void groupBy_WithZone_ShouldReturnGroupedByZone() {
+        // Arrange
+        String field = "zone";
+        List<Object[]> zoneResults = List.of(
+            new Object[]{"Zone 1", 3L},
+            new Object[]{"Zone 2", 2L}
+        );
+        
+        when(colisRepository.groupByZone()).thenReturn(zoneResults);
+        when(colisRepository.findByZoneNom("Zone 1")).thenReturn(List.of(colis));
+        when(colisRepository.findByZoneNom("Zone 2")).thenReturn(List.of(colis, colis));
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
+
+        // Act
+        Map<String, Object> result = colisService.groupBy(field);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("zone", result.get("groupBy"));
+        assertTrue(result.containsKey("data"));
+        
+        @SuppressWarnings("unchecked")
+        Map<String, Object> data = (Map<String, Object>) result.get("data");
+        assertEquals(2, data.size());
+        assertTrue(data.containsKey("Zone 1"));
+        assertTrue(data.containsKey("Zone 2"));
+    }
+
+    @Test
+    void groupBy_WithStatut_ShouldReturnGroupedByStatut() {
+        // Arrange
+        String field = "statut";
+        colis.setStatut(StatutColis.LIVRE);
+        List<Object[]> statutResults = List.of(
+            new Object[]{StatutColis.CREE, 5L},
+            new Object[]{StatutColis.LIVRE, 3L}
+        );
+        
+        when(colisRepository.groupByStatut()).thenReturn(statutResults);
+        when(colisRepository.findByStatut(StatutColis.CREE)).thenReturn(List.of(colis, colis, colis, colis, colis));
+        when(colisRepository.findByStatut(StatutColis.LIVRE)).thenReturn(List.of(colis, colis, colis));
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
+
+        // Act
+        Map<String, Object> result = colisService.groupBy(field);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("statut", result.get("groupBy"));
+        assertTrue(result.containsKey("data"));
+    }
+
+    @Test
+    void groupBy_WithPriorite_ShouldReturnGroupedByPriorite() {
+        // Arrange
+        String field = "priorite";
+        colis.setPriorite(PrioriteEnum.HAUTE);
+        List<Object[]> prioriteResults = List.of(
+            new Object[]{PrioriteEnum.HAUTE, 4L},
+            new Object[]{PrioriteEnum.MOYENNE, 6L}
+        );
+        
+        when(colisRepository.groupByPriorite()).thenReturn(prioriteResults);
+        when(colisRepository.findByPriorite(PrioriteEnum.HAUTE)).thenReturn(List.of(colis, colis, colis, colis));
+        when(colisRepository.findByPriorite(PrioriteEnum.MOYENNE)).thenReturn(List.of(colis, colis, colis, colis, colis, colis));
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
+
+        // Act
+        Map<String, Object> result = colisService.groupBy(field);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("priorite", result.get("groupBy"));
+        assertTrue(result.containsKey("data"));
+    }
+
+    @Test
+    void groupBy_WithInvalidField_ShouldThrowIllegalArgumentException() {
+        // Arrange
+        String invalidField = "invalid";
+        
         // Act & Assert
-        assertThrows(RuntimeException.class, () -> colisService.deleteById(colisId),
-            "Une exception aurait dû être levée car le colis n'existe pas");
-        verify(colisRepository, never()).deleteById(anyString());
+        IllegalArgumentException exception = assertThrows(
+            IllegalArgumentException.class,
+            () -> colisService.groupBy(invalidField)
+        );
+        
+        assertEquals("Champ de regroupement invalide: " + invalidField, exception.getMessage());
     }
-
     @Test
-    void testUpdateColis_Success() {
+    void assignLivreur_WhenColisAndLivreurExist_ShouldAssignLivreur() {
         // Arrange
-        String colisId = "c1";
-        Colis existingColis = new Colis();
-        existingColis.setId(colisId);
-        existingColis.setDescription("Ancienne description");
-
-        ColisDTO updatedDto = new ColisDTO();
-        updatedDto.setDescription("Nouvelle description");
-
-        when(colisRepository.findById(colisId)).thenReturn(Optional.of(existingColis));
-        when(colisRepository.save(any(Colis.class))).thenAnswer(i -> i.getArgument(0));
-        when(colisMapper.toDto(any(Colis.class))).thenAnswer(i -> {
-            Colis c = i.getArgument(0);
+        String colisId = "colis1";
+        String livreurId = "liv1";
+        
+        Livreur livreur = new Livreur();
+        livreur.setId(livreurId);
+        livreur.setNom("Livreur Test");
+        
+        when(colisRepository.findById(colisId)).thenReturn(Optional.of(colis));
+        when(livreurRepository.findById(livreurId)).thenReturn(Optional.of(livreur));
+        when(colisRepository.save(any(Colis.class))).thenAnswer(invocation -> {
+            Colis savedColis = invocation.getArgument(0);
+            savedColis.setLivreur(livreur);
+            return savedColis;
+        });
+        when(colisMapper.toDto(any(Colis.class))).thenAnswer(invocation -> {
+            Colis c = invocation.getArgument(0);
             ColisDTO dto = new ColisDTO();
             dto.setId(c.getId());
-            dto.setDescription(c.getDescription());
+            dto.setLivreurId(c.getLivreur() != null ? c.getLivreur().getId() : null);
             return dto;
         });
 
         // Act
-        ColisDTO result = colisService.update(colisId, updatedDto);
+        ColisDTO result = colisService.assignLivreur(colisId, livreurId);
 
         // Assert
-        assertThat(result).isNotNull();
-        assertThat(result.getDescription()).isEqualTo("Nouvelle description");
-        verify(colisRepository).save(existingColis);
+        assertNotNull(result);
+        assertEquals(colisId, result.getId());
+        assertEquals(livreurId, result.getLivreurId());
+        
+        verify(colisRepository).findById(colisId);
+        verify(livreurRepository).findById(livreurId);
+        verify(colisRepository).save(any(Colis.class));
     }
 
     @Test
-    void testUpdateColis_NotFound() {
+    void assignLivreur_WhenColisNotFound_ShouldThrowException() {
         // Arrange
-        String colisId = "c1";
-        ColisDTO updatedDto = new ColisDTO();
+        String colisId = "nonexistent";
+        String livreurId = "liv1";
+        
         when(colisRepository.findById(colisId)).thenReturn(Optional.empty());
 
         // Act & Assert
-        assertThrows(RuntimeException.class, () -> colisService.update(colisId, updatedDto));
-        verify(colisRepository, never()).save(any());
+        assertThrows(RuntimeException.class, 
+            () -> colisService.assignLivreur(colisId, livreurId),
+            "Colis non trouvé");
+        
+        verify(colisRepository).findById(colisId);
+        verify(livreurRepository, never()).findById(anyString());
     }
 
     @Test
-    void testFindById_Success() {
+    void assignLivreur_WhenLivreurNotFound_ShouldThrowException() {
         // Arrange
-        String colisId = "c1";
-        Colis colis = new Colis();
-        colis.setId(colisId);
-        ColisDTO colisDTO = new ColisDTO();
-        colisDTO.setId(colisId);
-
+        String colisId = "colis1";
+        String livreurId = "nonexistent";
+        
         when(colisRepository.findById(colisId)).thenReturn(Optional.of(colis));
+        when(livreurRepository.findById(livreurId)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(RuntimeException.class, 
+            () -> colisService.assignLivreur(colisId, livreurId),
+            "Livreur non trouvé");
+        
+        verify(colisRepository).findById(colisId);
+        verify(livreurRepository).findById(livreurId);
+    }
+
+    @Test
+    void findByLivreurIdAndStatut_WithStatut_ShouldReturnFilteredColis() {
+        // Arrange
+        String livreurId = "liv1";
+        String statut = "LIVRE";
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Colis> colisPage = new PageImpl<>(List.of(colis));
+        
+        when(colisRepository.findByLivreurIdAndStatut(livreurId, StatutColis.LIVRE, pageable))
+            .thenReturn(colisPage);
         when(colisMapper.toDto(colis)).thenReturn(colisDTO);
 
         // Act
-        Optional<ColisDTO> result = colisService.findById(colisId);
+        Page<ColisDTO> result = colisService.findByLivreurIdAndStatut(livreurId, statut, pageable);
 
         // Assert
-        assertThat(result).isPresent();
-        assertThat(result.get().getId()).isEqualTo(colisId);
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        verify(colisRepository).findByLivreurIdAndStatut(livreurId, StatutColis.LIVRE, pageable);
     }
 
     @Test
-    void testFindById_NotFound() {
+    void findByLivreurIdAndStatut_WithoutStatut_ShouldReturnAllColisForLivreur() {
         // Arrange
-        String colisId = "c1";
-        when(colisRepository.findById(colisId)).thenReturn(Optional.empty());
+        String livreurId = "liv1";
+        String statut = "";
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Colis> colisPage = new PageImpl<>(List.of(colis, colis));
+        
+        when(colisRepository.findByLivreurId(livreurId, pageable)).thenReturn(colisPage);
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
 
         // Act
-        Optional<ColisDTO> result = colisService.findById(colisId);
+        Page<ColisDTO> result = colisService.findByLivreurIdAndStatut(livreurId, statut, pageable);
 
         // Assert
-        assertThat(result).isNotPresent();
+        assertNotNull(result);
+        assertEquals(2, result.getTotalElements());
+        verify(colisRepository).findByLivreurId(livreurId, pageable);
+        verify(colisRepository, never()).findByLivreurIdAndStatut(anyString(), any(StatutColis.class), any(Pageable.class));
     }
 
     @Test
-    void testGetHistoriqueForColis_Success() {
+    void findByLivreurIdAndStatut_WithNullStatut_ShouldReturnAllColisForLivreur() {
         // Arrange
-        String colisId = "c1";
-        Colis colis = new Colis();
-        colis.setId(colisId);
-
-        HistoriqueLivraison historique = new HistoriqueLivraison();
-        historique.setId("h1");
-        historique.setColis(colis); // Set the colis object
-        historique.setStatut(StatutColis.CREE); // Set the statut
-        List<HistoriqueLivraison> historiques = Collections.singletonList(historique);
-
-        when(historiqueLivraisonRepository.findByColisIdOrderByDateChangementDesc(colisId)).thenReturn(historiques);
+        String livreurId = "liv1";
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Colis> colisPage = new PageImpl<>(List.of(colis, colis, colis));
+        
+        when(colisRepository.findByLivreurId(livreurId, pageable)).thenReturn(colisPage);
+        when(colisMapper.toDto(colis)).thenReturn(colisDTO);
 
         // Act
-        List<HistoriqueLivraisonDTO> result = colisService.getHistoriqueForColis(colisId);
+        Page<ColisDTO> result = colisService.findByLivreurIdAndStatut(livreurId, null, pageable);
 
         // Assert
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo("h1");
-        assertThat(result.get(0).getColisId()).isEqualTo(colisId);
-        assertThat(result.get(0).getStatut()).isEqualTo(StatutColis.CREE.name());
-    }
-
-    @Test
-    void testGetHistoriqueForColis_Empty() {
-        // Arrange
-        String colisId = "c1";
-        when(historiqueLivraisonRepository.findByColisIdOrderByDateChangementDesc(colisId)).thenReturn(Collections.emptyList());
-
-        // Act
-        List<HistoriqueLivraisonDTO> result = colisService.getHistoriqueForColis(colisId);
-
-        // Assert
-        assertThat(result).isEmpty();
+        assertNotNull(result);
+        assertEquals(3, result.getTotalElements());
+        verify(colisRepository).findByLivreurId(livreurId, pageable);
+        verify(colisRepository, never()).findByLivreurIdAndStatut(anyString(), any(StatutColis.class), any(Pageable.class));
     }
 }
